css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=PT+Sans+Narrow&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    background-color: #FAFCF8;
}
body {
    font-family: 'Nunito', sans-serif;
    font-weight: 500;
    color: #4a4a4a;
    font-size: larger;
}
body h3 {
    font-size: 45px;
}
/*headings and logo*/
h1, h3 {
    font-family: 'PT Sans Narrow', sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #719B43;
    margin-left: 5px;
    padding: 20px;
}
.megan {
    text-align: left;
    color: #888E8E;
    font-size: 25px;
    font-family: 'PT Sans Narrow', sans-serif;
    margin-top: -10px;
    text-transform: capitalize;
}
hr {
    border-top: 1px outset #888E8E;
    width: 100%;
    margin: 5px 0;
}
#logo {
    float: left;
    font-size: 250%;
}
/*navigation links*/
#menu-bar {
    font-size: 120%;
    letter-spacing: 5px;
    font-weight: bold;
    padding: 30px;
}
#menu-bar a {
    text-decoration: none;
    color: rgb(220, 108, 51);
}
#logo {
    line-height: 75px;
}
#menu-bar a:hover {
    border-bottom: 1px solid rgb(220, 108, 51);
}
#menu-bar li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
    margin-top: 20px;
}
.active {
    border-bottom: none;
}
/*hero image*/
#hero-image {
    background-image: url(../assets/images/hero-image.jpeg);
    height: 500px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    margin-left: -4px;
    margin-right: -4px;
}
.welcome {
    font-family: 'Nunito', sans-serif;
    text-align: center;
    color: #4a4a4a;
    font-weight: bold;
    margin: 4% 2% 4% 2%;
    font-size: larger;
    box-sizing: content-box;
    border: 1px solid #888E8E;
    border-radius: 10px;
    padding: 2%;
    letter-spacing: 0.5px;
}
/*biography and portrait*/
.column {
    margin: auto;
    justify-content: center;
    display: flex;
    width: 100%;
    padding: 5px;
}
#circle {
    background: url(../assets/images/robin3.webp);
    height: 500px;
    width: 500px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: auto;
    position: relative;
    border-radius: 50%;
    float: left;
    margin-left: 7px;
    
}
.biography {
    text-align: center;
    margin: 0;
    text-decoration: underline;
}
#robin {
    text-align: center;
    margin: 40px 40px 15% 0;
    font-size: 27px;
    display: flex;
    align-content: center;
}
 #video {
    display: flex;
    width: 100%;
    justify-content: center;
    margin-top: 5%;
}
 #video-text {
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10%;
    font-size: 25px;
 }
/*social networks & footer*/
footer {
    height: 190px;
}
.social-networks {
    text-align: center;
}
.social-networks li {
    display: inline;
}
.social-networks i {
    font-size: 130%;
    margin: 30px 0 30px 0;
    padding: 5%;
    color: black;
}
footer > h2 {
    text-align: center;
    color: #888E8E;
    padding-top: 6%;
}
/*book collection*/
#castle {
    background-image: url(../assets/images/castle.jpeg);
    height: 500px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}
#summary {
    font-size: inherit;
    font-family: inherit;
    margin-top: 5%;
    margin-left: 5%;
    margin-right: 5%;
    margin-bottom: 5%;
    text-align: center;
}
#early-work {
    font-family: 'Nunito', sans-serif;
    margin-bottom: 15px;
}
.row2 {
    display: block;
    flex-wrap: wrap;
    opacity: 0.83;
}   
.column2 img {
    display: flex;
    justify-content: center;
    width: 620px;
    padding: 0 0 0 15px;
    margin: 20px 0;
    width: 60%;
    margin-left: 20%;
}
#chronological {
    text-align: center;
    margin-left: 10%;   
    margin-right: 10%;
}
#order {
    text-align: center;
    margin-bottom: -4%;
    font-family: cursive;
    color: #888E8E;
}
#list {
    list-style-type: none;
    text-align: center;
    padding: 5%;
}
ul lh {
    font-size: x-large;
    font-weight: 1000;
    color: #719B43;
}
ul hr {
    width: 40%;
    margin-left: 30%;
}
li {
    margin: 15px;
    text-align: center;
}
/*meetup section styling*/
.meetup-section {
    clear: left;
    background-size: cover;
    background-position: center;
    text-align: center;
}
.book-club {
    background-image: url(../assets/images/dragonbooks.jpeg);
    height: 500px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    position: relative;
    object-fit: fill;

}
.email  {
    text-align: center;
    padding: 2%;
    margin: 2px;
    font-size: 25px;
}
input[type=submit] {
	margin-top: 20px;
	margin-left: 1rem;
	padding: 8px;
	background-color: #719B43;
	color: white;
	border: none;
	border-radius: 7px;}
#email-field {
    border: solid 1px #719B43;
    border-radius: 5px;
    height: 30px;    
    text-align: left;
}
form > p {
    margin: 40px;
    color: #4a4a4a;
    font-size: 24px;
    box-sizing: content-box;
    border: 1px solid #888E8E;
    border-radius: 10px;
    padding: 2%;
}
form > h2 {
    margin-top: 5%;
}
.reviews {
    font-family: cursive;
    color: #888E8E;
    margin-bottom: 20px;
    text-align: center;
    position: relative;
    text-transform: none;
    font-size: 25px;
    letter-spacing: 2px;
}
/* meetup times*/
.meetup-times {
    list-style-type: none;
    box-sizing: content-box;
    border: 1px solid green;
    border-radius: 5px;
    padding: 10px;
    width: 500px;
    margin-left: 32.5%;
    margin-bottom: 35px;
}
.map {
    margin-left: 50px;
    width: 100%;
}  
/*form dump styles*/
#thanks {
    background-image: url(../assets/images/thanks.jpeg);
    height: 600px;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    background-blend-mode: darken;
}
/* ... */

